@@ -63,6 +63,19 @@
       <widget class="QCheckBox" name="fixVariousArtists"/>
      </item>
      <item row="3" column="0">
+      <widget class="QLabel" name="autoScanLabel">
+       <property name="text">
+        <string>Automatically scan music when attached:</string>
+       </property>
+       <property name="buddy">
+        <cstring>autoScan</cstring>
+       </property>
+      </widget>
+     </item>
+     <item row="3" column="1">
+      <widget class="QCheckBox" name="autoScan"/>
+     </item>
+     <item row="4" column="0">
       <widget class="QLabel" name="useCacheLabel">
        <property name="text">
         <string>Use cache:</string>
@@ -72,7 +85,7 @@
        </property>
       </widget>
      </item>
-     <item row="3" column="1">
+     <item row="4" column="1">
       <widget class="QCheckBox" name="useCache"/>
      </item>
     </layout>
@@ -263,6 +276,7 @@
   <tabstop>musicFolder</tabstop>
   <tabstop>albumCovers</tabstop>
   <tabstop>fixVariousArtists</tabstop>
+  <tabstop>autoScan</tabstop>
   <tabstop>useCache</tabstop>
   <tabstop>vfatSafe</tabstop>
   <tabstop>asciiOnly</tabstop>
